Closed
Bug 1507713
Opened 7 years ago
Closed 7 years ago
Expose the heading level through the new native Android classes
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla65
Tracking | Status | |
---|---|---|
firefox65 | --- | fixed |
People
(Reporter: MarcoZ, Assigned: eeejay)
References
Details
(Keywords: parity-chrome)
Attachments
(1 file)
STR, with TalkBack enabled:
1. Bring up any page that has headings, for example Fennec help pages.
2. Swipe up or down until you hear "Headings", then swipe right.
Expected: TalkBack should speak the text, and then say "Heading level x (from 1 to 6)" to indicate the heading level.
Actual: TalkBack reads the text, speaks the fact that this is a heading, but omits the level.
Doing the same in Chrome yields the correct heading level.
Assignee | ||
Comment 1•7 years ago
|
||
Assignee | ||
Updated•7 years ago
|
Assignee: nobody → eitan
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5732f962288c
Provide heading level in roleDescription. r=yzen
Comment 3•7 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in
before you can comment on or make changes to this bug.
Description
•