Bug 1507713 - Provide heading level in roleDescription. r=yzen

Differential Revision: https://phabricator.services.mozilla.com/D13504

--HG--
extra : moz-landing-system : lando